--- a/css/common.css
+++ b/css/common.css
@@ -179,7 +179,7 @@ a:hover {
   left: 50%;
   margin-left: -7px;
   margin-top: -7px;
-  border: 2px solid currentColor;
+  border: 2px solid var(--btn-loading-color, currentColor);
   border-radius: 50%;
   border-top-color: transparent;
   animation: spin 0.6s linear infinite;
